# FileScaner

./: CMakeLists.txt  Main.qml  WriteWords.py  controller.cpp  controller.h  datamodel.cpp  datamodel.h  enums.h  fileexplorer.cpp  fileexplorer.h  main.cpp  structs.h  worker.cpp  worker.h
